--- a/PageTransitionFromDrawerApp/AppShell.xaml
+++ b/PageTransitionFromDrawerApp/AppShell.xaml
@@ -4,12 +4,19 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:PageTransitionFromDrawerApp"
-    Shell.FlyoutBehavior="Disabled"
+    Shell.FlyoutBehavior="Flyout"
     Title="PageTransitionFromDrawerApp">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <!-- Menu Header -->
+    <Shell.FlyoutHeader>
+        <StackLayout>
+            <Label Text="My App" FontSize="24" HorizontalOptions="Center" Padding="10" />
+        </StackLayout>
+    </Shell.FlyoutHeader>
+
+    <!-- Menu Item -->
+    <FlyoutItem Title="Home" Icon="home.png">
+        <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+    </FlyoutItem>
 
 </Shell>
